Server/feat/added login routes swagger
